--- a/HTML/form.html
+++ b/HTML/form.html
@@ -189,6 +189,13 @@
                         <h3>Artists List</h3> 
                         <p>Subtitle goes here.</p> 
                     </div>
+		<p>
+		  <button class="pink-borderless mobile-width btn" type="button" data-toggle="collapse" data-target="#search" aria-expanded="false" aria-controls="search">
+			Search
+		  </button>
+		</p>
+		<div class="collapse" id="search">
+		  <div class="card card-body">
                     <div class="content-right col-md-3 z10">
                         <div class="sidebar-searchbar col-md-12 pad0 col-sm-12">
                             <h4>FIND AN EVENT</h4>
@@ -287,6 +294,8 @@
                             </div>
                         </div>
                     </div>
+		  </div>
+		</div>
                     <div class="content-right col-md-9"> 				
                         <div class="row">
                             <div class="col-md-10 col-sm-12 col-xs-12 show-result sort-by"> 
