--- a/HTML/form.html
+++ b/HTML/form.html
@@ -106,6 +106,7 @@
             </nav>
             <!-- /.Section Navbar -->
         </div>
+		
         <!-- /.Section Navigation Header -->
         <!-- Section Slider -->
         <div class="swiper-container mobile-hidden">
@@ -189,113 +190,114 @@
                         <h3>Artists List</h3> 
                         <p>Subtitle goes here.</p> 
                     </div>
-		<p>
-		  <button class="pink-borderless mobile-width btn" type="button" data-toggle="collapse" data-target="#search" aria-expanded="false" aria-controls="search">
-			Search
-		  </button>
-		</p>
-		<div class="collapse" id="search">
-		  <div class="card card-body">
-                    <div class="content-right col-md-3 z10">
-                        <div class="sidebar-searchbar col-md-12 pad0 col-sm-12">
-                            <h4>FIND AN EVENT</h4>
-                            <div id="custom-search-input">
-                                <div class="input-group col-xs-12 col-sm-12 col-md-12">
-                                    <input type="text" class="  search-query form-control" placeholder="Event" />
-                                    <span class="input-group-btn"><button class="btn btn-danger" type="button">
-                                            <span class=" glyphicon glyphicon-search"></span>
-                                        </button></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sidebar-location col-md-12 pad0 col-sm-12">
-                            <h4>LOCATION</h4>
-                            <div id="custom-search-input">
-                                <div class="input-group col-xs-12 col-sm-12 col-md-12 absolute">
-                                    <input type="text" class="  search-query form-control" placeholder="search for location" />
-                                    <span class="input-group-btn"><button class="btn btn-danger" type="button">
-                                            <span class=" glyphicon glyphicon-search"></span>
-                                        </button></span>
-                                </div>
-                            </div>
-                            <div id="map"></div>
 
-                            <select class="selectpicker" id="genre">
-                                <option>Select City</option>
-                                <option>City 1</option>
-                                <option>City 2</option>
-                            </select>                             
-                        </div>
-                        <div class="sidebar-selectdate col-md-12 pad0 col-sm-12">
-                            <h4>SELECT DATE</h4>
-                            <div class="dates">
-                                <input class="form-control date1" id="date1" name="date" placeholder="07/15/2016" type="text">
-                                <input class="form-control date2" id="date2" name="date" placeholder="07/15/2016" type="text">
-                            </div>
-                        </div>
-                        <div class="sidebar-popularcategories col-md-12 pad0 col-sm-12 mobile-hidden">
-                            <div class="col-md-12 popularcategories-item border-btm">
-                                <a href=""><h5>Today</h5></a> 
-                            </div>
-                            <div class="col-md-12 popularcategories-item border-btm">
-                                <a href=""></a>
-                                <h5>Tomorrow</h5> 
-                            </div>
-                            <div class="col-md-12 popularcategories-item border-btm">
-                                <a href=""><h5>This Week</h5></a> 
-                            </div>
-                            <div class="col-md-12 popularcategories-item border-btm">
-                                <a href=""><h5>This Weekend</h5></a> 
-                            </div>
-                            <div class="col-md-12 popularcategories-item border-btm">
-                                <a href=""><h5>Next Week</h5></a> 
-                            </div>
-                            <div class="col-md-12 popularcategories-item">
-                                <a href=""><h5>This Month</h5></a> 
-                            </div>
-                        </div>
-                        <div class="genre sidebar-popularcategories col-md-12 pad0 col-sm-12">
-                            <h4>TYPE</h4>
-                            <div class="col-md-12 popularcategories-item genre-type border-btm">
-                                <h5><label> 
-                                        <div class="custom-checkbox">
-                                            <input type="checkbox" class="list-5" name="list-5" id="list-5" value=""> Party
-                                            <label for="list-5"></label>
-                                        </div>
-                                    </label>
-                                </h5> 
-                            </div>
-                            <div class="col-md-12 popularcategories-item genre-type border-btm">
-                                <h5><label> 
-                                        <div class="custom-checkbox">
-                                            <input type="checkbox" class="list-6" name="list-6" id="list-6" value=""> Festival
-                                            <label for="list-6"></label>
-                                        </div>
-                                    </label>
-                                </h5> 
-                            </div>
-                            <div class="col-md-12 popularcategories-item genre-type border-btm">
-                                <h5><label> 
-                                        <div class="custom-checkbox">
-                                            <input type="checkbox" class="list-7" name="list-7" id="list-7" value=""> Dance Hall
-                                            <label for="list-7"></label>
-                                        </div>
-                                    </label>
-                                </h5> 
-                            </div>
-                            <div class="col-md-12 popularcategories-item genre-type">
-                                <h5><label> 
-                                        <div class="custom-checkbox">
-                                            <input type="checkbox" class="list-8" name="list-8" id="list-8" value=""> Outdor
-                                            <label for="list-8"></label>
-                                        </div>
-                                    </label>
-                                </h5> 
-                            </div>
-                        </div>
-                    </div>
-		  </div>
-		</div>
+
+					
+						<br />
+						<div class="card card-body">
+								<div class="content-right col-md-3 z10">
+													<div class="sidebar-searchbar col-md-12 pad0 col-sm-12">
+						<h4>FIND AN EVENT</h4>
+						<div id="custom-search-input">
+							<div class="input-group col-xs-12 col-sm-12 col-md-12">
+								<input type="text" class="  search-query form-control" placeholder="Event" />
+								<span class="input-group-btn"><button class="btn btn-danger" type="button">
+										<span class=" glyphicon glyphicon-search"></span>
+									</button></span>
+							</div>
+						</div>
+					</div>
+										<p>
+					  <button class="pink-borderless mobile-width btn non-mobile-hide" type="button" data-toggle="collapse" data-target="#search" aria-expanded="false" aria-controls="search">
+						Advanced search
+					  </button>
+					</p>
+
+					<div class="collapse light-pink" id="search">
+									<br />
+									<div class="height-auto sidebar-location col-md-12 pad0 col-sm-12">
+										<h4>LOCATION</h4>
+										<div id="custom-search-input">
+											<div class="input-group col-xs-12 col-sm-12 col-md-12 absolute width-80">
+												<input type="text" class="  search-query form-control" placeholder="search for location" />
+												<span class="input-group-btn"><button class="btn btn-danger" type="button">
+														<span class=" glyphicon glyphicon-search"></span>
+													</button></span>
+											</div>
+										</div>
+										<div class="map" id="map"></div>
+									</div>
+									<div class="sidebar-selectdate col-md-12 pad0 col-sm-12">
+										<h4>SELECT DATE</h4>
+										<div class="dates">
+											<input class="form-control date1" id="date1" name="date" placeholder="07/15/2016" type="text">
+											<input class="form-control date2" id="date2" name="date" placeholder="07/15/2016" type="text">
+										</div>
+									</div>
+									<div class="sidebar-popularcategories col-md-12 pad0 col-sm-12 mobile-hidden">
+										<div class="col-md-12 popularcategories-item border-btm">
+											<a href=""><h5>Today</h5></a> 
+										</div>
+										<div class="col-md-12 popularcategories-item border-btm">
+											<a href=""></a>
+											<h5>Tomorrow</h5> 
+										</div>
+										<div class="col-md-12 popularcategories-item border-btm">
+											<a href=""><h5>This Week</h5></a> 
+										</div>
+										<div class="col-md-12 popularcategories-item border-btm">
+											<a href=""><h5>This Weekend</h5></a> 
+										</div>
+										<div class="col-md-12 popularcategories-item border-btm">
+											<a href=""><h5>Next Week</h5></a> 
+										</div>
+										<div class="col-md-12 popularcategories-item">
+											<a href=""><h5>This Month</h5></a> 
+										</div>
+									</div>
+									<div class="genre sidebar-popularcategories col-md-12 pad0 col-sm-12">
+										
+										<h4>TYPE</h4>
+										<div class="col-md-12 popularcategories-item genre-type border-btm">
+											<h5><label> 
+													<div class="custom-checkbox">
+														<input type="checkbox" class="list-5" name="list-5" id="list-5" value=""> Party
+														<label for="list-5"></label>
+													</div>
+												</label>
+											</h5> 
+										</div>
+										<div class="col-md-12 popularcategories-item genre-type border-btm">
+											<h5><label> 
+													<div class="custom-checkbox">
+														<input type="checkbox" class="list-6" name="list-6" id="list-6" value=""> Festival
+														<label for="list-6"></label>
+													</div>
+												</label>
+											</h5> 
+										</div>
+										<div class="col-md-12 popularcategories-item genre-type border-btm">
+											<h5><label> 
+													<div class="custom-checkbox">
+														<input type="checkbox" class="list-7" name="list-7" id="list-7" value=""> Dance Hall
+														<label for="list-7"></label>
+													</div>
+												</label>
+											</h5> 
+										</div>
+										<div class="col-md-12 popularcategories-item genre-type">
+											<h5><label> 
+													<div class="custom-checkbox">
+														<input type="checkbox" class="list-8" name="list-8" id="list-8" value=""> Outdoor
+														<label for="list-8"></label>
+													</div>
+												</label>
+											</h5> 
+										</div>
+									</div>
+								</div>
+						</div>
+					</div>
                     <div class="content-right col-md-9"> 				
                         <div class="row">
                             <div class="col-md-10 col-sm-12 col-xs-12 show-result sort-by"> 
